--- a/app.html
+++ b/app.html
@@ -63,7 +63,7 @@
     <!-- Resume -->
         <div class="resume">
             <i class="fa-regular fa-file"></i>
-            <h1 class="big-text"> Resume</h1>
+            <h1 class="md-text"> Resume</h1>
         </div>
         <div class="resume-card">
             <div class="resume-title">
@@ -71,17 +71,16 @@
             </div>
             <div class="resume-content">
                 <div>
-                    <h2>BS Computer Science</h2>
-                    <h3>University of the Philippines</h3>
-                    <h4>2018-2022</h4>
+                    <h2>BS Information Technology</h2>
+                    <h3>National University-Manila</h3>
                 </div>
                 <div>
-                    <h2>BS Computer Science</h2>
-                    <h3>University of the Philippines</h3>
-                    <h4>2018-2022</h4>
+                    <div ></div>
                 </div>
             </div>
         </div>
+
+
     </div>
 
 </body>
