Enhance styling and structure of resume section; update image frame and add project details

--- a/app.html
+++ b/app.html
@@ -55,33 +55,59 @@
                         <h2>I love designing and improving systems for better user experience</h2>
                     </div>
                 </div>
-                <div class="image">
-                    <div class="image-frame">edi wow</div>
+                <div class="image">                   
+                    <div class="image-frame" role="img" aria-label="portrait photo"></div>
                 </div>
             </div>
         </div>
+
     <!-- Resume -->
         <div class="resume">
-            <i class="fa-regular fa-file"></i>
+            <i class="fa-solid fa-file-lines"></i>
             <h1 class="md-text"> Resume</h1>
+        </div>
+        <div class="card-holder">
+            <div class="resume-card">
+                <div class="resume-title">
+                    <i class="fa-solid fa-user-graduate"></i>
+                </div>
+                <div class="resume-content">
+                    <div>
+                        <h1>BS Information Technology</h1>
+                        <h2>National University-Manila</h2>
+                    </div>    
+    
+                </div>
+            </div>
+    
+            <div class="resume-card">
+                <div class="resume-title">
+                    <i class="fa-solid fa-brain"></i>
+                </div>
+                <div class="resume-content">
+                    <div>
+                        <h1>Skills & Hobbies</h1>
+                        <h2>National University-Manila</h2>
+                    </div> 
+                </div>
+            </div>           
         </div>
         <div class="resume-card">
             <div class="resume-title">
-                <h1>Education</h1>
+                <i class="fa-solid fa-code"></i>
             </div>
             <div class="resume-content">
                 <div>
-                    <h2>BS Information Technology</h2>
-                    <h3>National University-Manila</h3>
-                </div>
-                <div>
-                    <div ></div>
-                </div>
+                    <h1>Technical Skills</h1>
+                    <h2>National University-Manila</h2>
+                </div> 
             </div>
         </div>
-
-
     </div>
 
+    <div class="resume">
+        <i class="fa-solid fa-folder-open"></i>
+        <h1 class="md-text"> Projects</h1>
+    </div>
 </body>
 </html>
