embedded website in project

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kevin Abgao</title>
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
@@ -87,7 +87,7 @@
                 <div class="resume-content">
                     <div>
                         <h1>Skills & Hobbies</h1>
-                        <h2>National University-Manila</h2>
+                        <h2>Running, Multimedia Arts, and Reading</h2>
                     </div> 
                 </div>
             </div>           
@@ -99,15 +99,53 @@
             <div class="resume-content">
                 <div>
                     <h1>Technical Skills</h1>
-                    <h2>National University-Manila</h2>
+                    <h2>Knowledgeable on ReactJS, Flutter, CSS, HTML and JS </h2>
                 </div> 
             </div>
         </div>
-    </div>
+    
 
-    <div class="resume">
-        <i class="fa-solid fa-folder-open"></i>
-        <h1 class="md-text"> Projects</h1>
+        <div class="resume">
+            <i class="fa-solid fa-folder-open"></i>
+            <h1 class="md-text"> Projects</h1>
+        </div>
+        <div class="project-card-holder">
+            <div class="card-title">
+                <h1>First HTML & CSS Project</h1>
+                <h2>Design analysis from HenLin Website</h2>
+            </div>
+
+            <div class="resume-card">
+                <iframe 
+                    src="https://curious-person.github.io/WebDevProject/" 
+                    width="100%" 
+                    height="500px" 
+                    style="border: none; border-radius: 12px;"
+                    allow="clipboard-write"
+                >
+                    Your browser does not support iframes.
+                </iframe>
+            </div>
+            <div class="card-title">
+                <h1>First Project using Javascript</h1>
+                <h2>To-Do List with check and delete functionality</h2>
+            </div>
+
+            <div class="resume-card">
+                <iframe 
+                    src="https://curious-person.github.io/todolist_project/" 
+                    width="100%" 
+                    height="500px" 
+                    style="border: none;  border-radius: 12px;"
+                    allow="clipboard-write"
+                >
+                    Your browser does not support iframes.
+                </iframe>
+            </div>
+        </div>
+
+
+
     </div>
 </body>
 </html>
