changed photo path

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </nav>
             <div class="nav-container">
                 <div class="nav-children">
-                    <img src="images/logo.png" id="logo" alt="logo">
+                    <img src="./images/logo.png" id="logo" alt="logo">
                 </div>
                 <div class="nav-children-options">
                     <div>
